force-app/main/default/objects/EB_Coupon__c/EB_Coupon__c.object-meta.xml
<CustomObject>
    <label>EB Coupon</label>
    <nameField>
        <displayFormat>EBC{00000000}</displayFormat>
        <label>EB Coupon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EB Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>