force-app/main/default/objects/EB_Coupon__c/fields/coupon__c.field-meta.xml
<CustomField>
    <fullName>coupon__c</fullName>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Coupon Status - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>coupon__c.Status__c</field>
            <operation>equals</operation>
            <value>Enabled</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>EB Coupons</relationshipLabel>
    <relationshipName>EB_Coupons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>