force-app/main/default/objects/EB_Coupon__c/fields/Exclusive_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Bookings__c</fullName>
    <label>Exclusive Bookings</label>
    <referenceTo>Exclusive_Bookings__c</referenceTo>
    <relationshipLabel>Exclusive Bookings Coupons</relationshipLabel>
    <relationshipName>Exclusive_Bookings_Coupons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>