force-app/main/default/objects/EB_Coupon__c/fields/total_discounts__c.field-meta.xml
<CustomField>
    <fullName>total_discounts__c</fullName>
    <label>Total Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>